--- a/api/src/test/resources/crds/v1/040-Crd-kafka.yaml
+++ b/api/src/test/resources/crds/v1/040-Crd-kafka.yaml
@@ -1227,6 +1227,9 @@ spec:
                                   csi: {}
                                   image: {}
                             description: Additional volumes that can be mounted to the pod.
+                          hostUsers:
+                            type: boolean
+                            description: "Use the host user namespace. Optional. Defaults to `true`. When `true` or not set, the pod runs in the host user namespace. This is required when the pod needs features available only in the host namespace, such as loading kernel modules with `CAP_SYS_MODULE`.When set to `false`, the pod runs in a new user namespace. Setting `false` helps mitigate container breakout vulnerabilities and allows containers to run as `root` without granting `root` privileges on the host. This property is alpha-level in Kubernetes and is supported only by Kubernetes clusters that enable the `UserNamespacesSupport` feature."
                         description: Template for Kafka `Pods`.
                       bootstrapService:
                         type: object
@@ -2899,6 +2902,9 @@ spec:
                                   csi: {}
                                   image: {}
                             description: Additional volumes that can be mounted to the pod.
+                          hostUsers:
+                            type: boolean
+                            description: "Use the host user namespace. Optional. Defaults to `true`. When `true` or not set, the pod runs in the host user namespace. This is required when the pod needs features available only in the host namespace, such as loading kernel modules with `CAP_SYS_MODULE`.When set to `false`, the pod runs in a new user namespace. Setting `false` helps mitigate container breakout vulnerabilities and allows containers to run as `root` without granting `root` privileges on the host. This property is alpha-level in Kubernetes and is supported only by Kubernetes clusters that enable the `UserNamespacesSupport` feature."
                         description: Template for Entity Operator `Pods`.
                       topicOperatorContainer:
                         type: object
@@ -4147,6 +4153,9 @@ spec:
                                   csi: {}
                                   image: {}
                             description: Additional volumes that can be mounted to the pod.
+                          hostUsers:
+                            type: boolean
+                            description: "Use the host user namespace. Optional. Defaults to `true`. When `true` or not set, the pod runs in the host user namespace. This is required when the pod needs features available only in the host namespace, such as loading kernel modules with `CAP_SYS_MODULE`.When set to `false`, the pod runs in a new user namespace. Setting `false` helps mitigate container breakout vulnerabilities and allows containers to run as `root` without granting `root` privileges on the host. This property is alpha-level in Kubernetes and is supported only by Kubernetes clusters that enable the `UserNamespacesSupport` feature."
                         description: Template for Cruise Control `Pods`.
                       apiService:
                         type: object
@@ -5273,6 +5282,9 @@ spec:
                                   csi: {}
                                   image: {}
                             description: Additional volumes that can be mounted to the pod.
+                          hostUsers:
+                            type: boolean
+                            description: "Use the host user namespace. Optional. Defaults to `true`. When `true` or not set, the pod runs in the host user namespace. This is required when the pod needs features available only in the host namespace, such as loading kernel modules with `CAP_SYS_MODULE`.When set to `false`, the pod runs in a new user namespace. Setting `false` helps mitigate container breakout vulnerabilities and allows containers to run as `root` without granting `root` privileges on the host. This property is alpha-level in Kubernetes and is supported only by Kubernetes clusters that enable the `UserNamespacesSupport` feature."
                         description: Template for Kafka Exporter `Pods`.
                       container:
                         type: object
