--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/045-Crd-kafkanodepool.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/045-Crd-kafkanodepool.yaml
@@ -70,7 +70,7 @@ spec:
                       description: The storage class to use for dynamic volume allocation.
                     deleteClaim:
                       type: boolean
-                      description: Specifies if the persistent volume claim has to be deleted when the cluster is un-deployed. Optional. Defaults to `false`.
+                      description: Specifies whether the persistent volume claim is deleted when a Kafka node is deleted. Optional. Defaults to `false`.
                     id:
                       type: integer
                       minimum: 0
@@ -112,7 +112,7 @@ spec:
                             description: The storage class to use for dynamic volume allocation.
                           deleteClaim:
                             type: boolean
-                            description: Specifies if the persistent volume claim has to be deleted when the cluster is un-deployed. Optional. Defaults to `false`.
+                            description: Specifies whether the persistent volume claim is deleted when a Kafka node is deleted. Optional. Defaults to `false`.
                           id:
                             type: integer
                             minimum: 0
@@ -1354,7 +1354,7 @@ spec:
                       description: The storage class to use for dynamic volume allocation.
                     deleteClaim:
                       type: boolean
-                      description: Specifies if the persistent volume claim has to be deleted when the cluster is un-deployed. Optional. Defaults to `false`.
+                      description: Specifies whether the persistent volume claim is deleted when a Kafka node is deleted. Optional. Defaults to `false`.
                     id:
                       type: integer
                       minimum: 0
@@ -1408,7 +1408,7 @@ spec:
                             description: The storage class to use for dynamic volume allocation.
                           deleteClaim:
                             type: boolean
-                            description: Specifies if the persistent volume claim has to be deleted when the cluster is un-deployed. Optional. Defaults to `false`.
+                            description: Specifies whether the persistent volume claim is deleted when a Kafka node is deleted. Optional. Defaults to `false`.
                           id:
                             type: integer
                             minimum: 0
