--- a/docker-images/artifacts/kafka-thirdparty-libs/4.2.x/pom.xml
+++ b/docker-images/artifacts/kafka-thirdparty-libs/4.2.x/pom.xml
@@ -28,7 +28,7 @@
         <opentelemetry.instrumentation.version>1.32.0-alpha</opentelemetry.instrumentation.version>
         <grpc-netty-shaded.version>1.75.0</grpc-netty-shaded.version>
         <guava.version>32.1.3-jre</guava.version>
-        <log4j.version>2.24.3</log4j.version>
+        <log4j.version>2.25.3</log4j.version>
     </properties>
 
     <repositories>
@@ -302,7 +302,7 @@
                  So we need to include it explicitly, but we exclude its dependencies that are in Kafka already. -->
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-scala_2.13</artifactId>
-            <version>2.16.2</version>
+            <version>2.19.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.scala-lang</groupId>
@@ -351,7 +351,7 @@
                     <artifactId>jackson-databind</artifactId>
                 </exclusion>
                 <exclusion>
-                    <!-- Excluded and imported separately to keep the Jackson version in sync with Kafka -->
+                    <!-- Excluded because using the latest version coming from Kafka -->
                     <groupId>com.fasterxml.jackson.dataformat</groupId>
                     <artifactId>jackson-dataformat-yaml</artifactId>
                 </exclusion>
@@ -363,14 +363,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.dataformat</groupId>
-            <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>2.16.2</version>
-        </dependency>
-        <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.16.2</version>
+            <version>2.19.2</version>
         </dependency>
     </dependencies>
 </project>
