--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,17 @@
         </developer>
     </developers>
 
+    <repositories>
+        <repository>
+            <!--
+            We use the Kafka staging repository while we use the RC releases of Kafka 4.2.0. This should be removed once
+            we move to the final release of Kafka 4.2.0.
+            -->
+            <id>apache-staging</id>
+            <url>https://repository.apache.org/content/groups/staging/</url>
+        </repository>
+    </repositories>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
@@ -84,7 +95,7 @@
         <fasterxml.jackson-jaxrs.version>2.18.3</fasterxml.jackson-jaxrs.version>
         <vertx.version>5.0.7</vertx.version>
         <vertx-junit5.version>5.0.7</vertx-junit5.version>
-        <kafka.version>4.1.1</kafka.version>
+        <kafka.version>4.2.0</kafka.version>
         <yammer-metrics.version>2.2.0</yammer-metrics.version>
         <snappy.version>1.1.10.5</snappy.version>
         <slf4j.version>2.0.17</slf4j.version>
