Prepare for 0.50.0 release
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/helm-charts/helm3/strimzi-kafka-operator/crds/040-Crd-kafka.yaml
+++ b/helm-charts/helm3/strimzi-kafka-operator/crds/040-Crd-kafka.yaml
@@ -31,13 +31,17 @@ spec:
           description: The state of the custom resource
           jsonPath: ".status.conditions[?(@.type==\"Ready\")].status"
           type: string
-        - name: Metadata State
-          description: The state of the cluster metadata
-          jsonPath: .status.kafkaMetadataState
-          type: string
         - name: Warnings
           description: Warnings related to the custom resource
           jsonPath: ".status.conditions[?(@.type==\"Warning\")].status"
+          type: string
+        - name: Kafka version
+          description: The Kafka version used by the cluster
+          jsonPath: .status.kafkaVersion
+          type: string
+        - name: Metadata version
+          description: The Kafka metadata version used by the cluster
+          jsonPath: .status.kafkaMetadataVersion
           type: string
       schema:
         openAPIV3Schema:
@@ -1067,6 +1071,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         bootstrapService:
                           type: object
                           properties:
@@ -2540,6 +2546,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         topicOperatorContainer:
                           type: object
                           properties:
@@ -3676,6 +3684,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         apiService:
                           type: object
                           properties:
@@ -4700,6 +4710,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         container:
                           type: object
                           properties:
@@ -4967,13 +4979,17 @@ spec:
           description: The state of the custom resource
           jsonPath: ".status.conditions[?(@.type==\"Ready\")].status"
           type: string
-        - name: Metadata State
-          description: The state of the cluster metadata
-          jsonPath: .status.kafkaMetadataState
-          type: string
         - name: Warnings
           description: Warnings related to the custom resource
           jsonPath: ".status.conditions[?(@.type==\"Warning\")].status"
+          type: string
+        - name: Kafka version
+          description: The Kafka version used by the cluster
+          jsonPath: .status.kafkaVersion
+          type: string
+        - name: Metadata version
+          description: The Kafka metadata version used by the cluster
+          jsonPath: .status.kafkaMetadataVersion
           type: string
       schema:
         openAPIV3Schema:
@@ -6332,6 +6348,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         bootstrapService:
                           type: object
                           properties:
@@ -7758,6 +7776,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         clientService:
                           type: object
                           properties:
@@ -9014,6 +9034,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         topicOperatorContainer:
                           type: object
                           properties:
@@ -10364,6 +10386,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         apiService:
                           type: object
                           properties:
@@ -11522,6 +11546,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         container:
                           type: object
                           properties:
@@ -12396,6 +12422,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         service:
                           type: object
                           properties:
