--- a/install/cluster-operator/048-Crd-kafkamirrormaker2.yaml
+++ b/install/cluster-operator/048-Crd-kafkamirrormaker2.yaml
@@ -302,7 +302,7 @@ spec:
                         config:
                           x-kubernetes-preserve-unknown-fields: true
                           type: object
-                          description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max."
+                          description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max, connector.plugin.version."
                         state:
                           type: string
                           enum:
@@ -358,7 +358,7 @@ spec:
                         config:
                           x-kubernetes-preserve-unknown-fields: true
                           type: object
-                          description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max."
+                          description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max, connector.plugin.version."
                         state:
                           type: string
                           enum:
@@ -1298,6 +1298,9 @@ spec:
                               csi: {}
                               image: {}
                         description: Additional volumes that can be mounted to the pod.
+                      hostUsers:
+                        type: boolean
+                        description: "Use the host user namespace. Optional. Defaults to `true`. When `true` or not set, the pod runs in the host user namespace. This is required when the pod needs features available only in the host namespace, such as loading kernel modules with `CAP_SYS_MODULE`.When set to `false`, the pod runs in a new user namespace. Setting `false` helps mitigate container breakout vulnerabilities and allows containers to run as `root` without granting `root` privileges on the host. This property is alpha-level in Kubernetes and is supported only by Kubernetes clusters that enable the `UserNamespacesSupport` feature."
                     description: Template for Kafka Connect `Pods`.
                   apiService:
                     type: object
@@ -2353,6 +2356,9 @@ spec:
                               csi: {}
                               image: {}
                         description: Additional volumes that can be mounted to the pod.
+                      hostUsers:
+                        type: boolean
+                        description: "Use the host user namespace. Optional. Defaults to `true`. When `true` or not set, the pod runs in the host user namespace. This is required when the pod needs features available only in the host namespace, such as loading kernel modules with `CAP_SYS_MODULE`.When set to `false`, the pod runs in a new user namespace. Setting `false` helps mitigate container breakout vulnerabilities and allows containers to run as `root` without granting `root` privileges on the host. This property is alpha-level in Kubernetes and is supported only by Kubernetes clusters that enable the `UserNamespacesSupport` feature."
                     description: Template for Kafka Connect Build `Pods`. The build pod is used only on Kubernetes.
                   buildContainer:
                     type: object
@@ -3441,7 +3447,7 @@ spec:
                         config:
                           x-kubernetes-preserve-unknown-fields: true
                           type: object
-                          description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max."
+                          description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max, connector.plugin.version."
                         state:
                           type: string
                           enum:
@@ -3500,7 +3506,7 @@ spec:
                         config:
                           x-kubernetes-preserve-unknown-fields: true
                           type: object
-                          description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max."
+                          description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max, connector.plugin.version."
                         state:
                           type: string
                           enum:
@@ -3559,7 +3565,7 @@ spec:
                         config:
                           x-kubernetes-preserve-unknown-fields: true
                           type: object
-                          description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max."
+                          description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max, connector.plugin.version."
                         state:
                           type: string
                           enum:
@@ -4528,6 +4534,9 @@ spec:
                               csi: {}
                               image: {}
                         description: Additional volumes that can be mounted to the pod.
+                      hostUsers:
+                        type: boolean
+                        description: "Use the host user namespace. Optional. Defaults to `true`. When `true` or not set, the pod runs in the host user namespace. This is required when the pod needs features available only in the host namespace, such as loading kernel modules with `CAP_SYS_MODULE`.When set to `false`, the pod runs in a new user namespace. Setting `false` helps mitigate container breakout vulnerabilities and allows containers to run as `root` without granting `root` privileges on the host. This property is alpha-level in Kubernetes and is supported only by Kubernetes clusters that enable the `UserNamespacesSupport` feature."
                     description: Template for Kafka Connect `Pods`.
                   apiService:
                     type: object
@@ -5583,6 +5592,9 @@ spec:
                               csi: {}
                               image: {}
                         description: Additional volumes that can be mounted to the pod.
+                      hostUsers:
+                        type: boolean
+                        description: "Use the host user namespace. Optional. Defaults to `true`. When `true` or not set, the pod runs in the host user namespace. This is required when the pod needs features available only in the host namespace, such as loading kernel modules with `CAP_SYS_MODULE`.When set to `false`, the pod runs in a new user namespace. Setting `false` helps mitigate container breakout vulnerabilities and allows containers to run as `root` without granting `root` privileges on the host. This property is alpha-level in Kubernetes and is supported only by Kubernetes clusters that enable the `UserNamespacesSupport` feature."
                     description: Template for Kafka Connect Build `Pods`. The build pod is used only on Kubernetes.
                   buildContainer:
                     type: object
