--- a/helm-charts/helm3/strimzi-kafka-operator/crds/048-Crd-kafkamirrormaker2.yaml
+++ b/helm-charts/helm3/strimzi-kafka-operator/crds/048-Crd-kafkamirrormaker2.yaml
@@ -303,7 +303,7 @@ spec:
                           config:
                             x-kubernetes-preserve-unknown-fields: true
                             type: object
-                            description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max."
+                            description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max, connector.plugin.version."
                           state:
                             type: string
                             enum:
@@ -359,7 +359,7 @@ spec:
                           config:
                             x-kubernetes-preserve-unknown-fields: true
                             type: object
-                            description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max."
+                            description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max, connector.plugin.version."
                           state:
                             type: string
                             enum:
@@ -1299,6 +1299,9 @@ spec:
                                   csi: {}
                                   image: {}
                           description: Additional volumes that can be mounted to the pod.
+                        hostUsers:
+                          type: boolean
+                          description: "Use the host user namespace. Optional. Defaults to `true`. When `true` or not set, the pod runs in the host user namespace. This is required when the pod needs features available only in the host namespace, such as loading kernel modules with `CAP_SYS_MODULE`.When set to `false`, the pod runs in a new user namespace. Setting `false` helps mitigate container breakout vulnerabilities and allows containers to run as `root` without granting `root` privileges on the host. This property is alpha-level in Kubernetes and is supported only by Kubernetes clusters that enable the `UserNamespacesSupport` feature."
                       description: Template for Kafka Connect `Pods`.
                     apiService:
                       type: object
@@ -2354,6 +2357,9 @@ spec:
                                   csi: {}
                                   image: {}
                           description: Additional volumes that can be mounted to the pod.
+                        hostUsers:
+                          type: boolean
+                          description: "Use the host user namespace. Optional. Defaults to `true`. When `true` or not set, the pod runs in the host user namespace. This is required when the pod needs features available only in the host namespace, such as loading kernel modules with `CAP_SYS_MODULE`.When set to `false`, the pod runs in a new user namespace. Setting `false` helps mitigate container breakout vulnerabilities and allows containers to run as `root` without granting `root` privileges on the host. This property is alpha-level in Kubernetes and is supported only by Kubernetes clusters that enable the `UserNamespacesSupport` feature."
                       description: Template for Kafka Connect Build `Pods`. The build pod is used only on Kubernetes.
                     buildContainer:
                       type: object
@@ -3442,7 +3448,7 @@ spec:
                           config:
                             x-kubernetes-preserve-unknown-fields: true
                             type: object
-                            description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max."
+                            description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max, connector.plugin.version."
                           state:
                             type: string
                             enum:
@@ -3501,7 +3507,7 @@ spec:
                           config:
                             x-kubernetes-preserve-unknown-fields: true
                             type: object
-                            description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max."
+                            description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max, connector.plugin.version."
                           state:
                             type: string
                             enum:
@@ -3560,7 +3566,7 @@ spec:
                           config:
                             x-kubernetes-preserve-unknown-fields: true
                             type: object
-                            description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max."
+                            description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max, connector.plugin.version."
                           state:
                             type: string
                             enum:
@@ -4529,6 +4535,9 @@ spec:
                                   csi: {}
                                   image: {}
                           description: Additional volumes that can be mounted to the pod.
+                        hostUsers:
+                          type: boolean
+                          description: "Use the host user namespace. Optional. Defaults to `true`. When `true` or not set, the pod runs in the host user namespace. This is required when the pod needs features available only in the host namespace, such as loading kernel modules with `CAP_SYS_MODULE`.When set to `false`, the pod runs in a new user namespace. Setting `false` helps mitigate container breakout vulnerabilities and allows containers to run as `root` without granting `root` privileges on the host. This property is alpha-level in Kubernetes and is supported only by Kubernetes clusters that enable the `UserNamespacesSupport` feature."
                       description: Template for Kafka Connect `Pods`.
                     apiService:
                       type: object
@@ -5584,6 +5593,9 @@ spec:
                                   csi: {}
                                   image: {}
                           description: Additional volumes that can be mounted to the pod.
+                        hostUsers:
+                          type: boolean
+                          description: "Use the host user namespace. Optional. Defaults to `true`. When `true` or not set, the pod runs in the host user namespace. This is required when the pod needs features available only in the host namespace, such as loading kernel modules with `CAP_SYS_MODULE`.When set to `false`, the pod runs in a new user namespace. Setting `false` helps mitigate container breakout vulnerabilities and allows containers to run as `root` without granting `root` privileges on the host. This property is alpha-level in Kubernetes and is supported only by Kubernetes clusters that enable the `UserNamespacesSupport` feature."
                       description: Template for Kafka Connect Build `Pods`. The build pod is used only on Kubernetes.
                     buildContainer:
                       type: object
