--- a/install/cluster-operator/045-Crd-kafkanodepool.yaml
+++ b/install/cluster-operator/045-Crd-kafkanodepool.yaml
@@ -69,7 +69,7 @@ spec:
                     description: The storage class to use for dynamic volume allocation.
                   deleteClaim:
                     type: boolean
-                    description: Specifies if the persistent volume claim has to be deleted when the cluster is un-deployed.
+                    description: Specifies whether the persistent volume claim is deleted when a Kafka node is deleted. Optional. Defaults to `false`.
                   id:
                     type: integer
                     minimum: 0
@@ -111,7 +111,7 @@ spec:
                           description: The storage class to use for dynamic volume allocation.
                         deleteClaim:
                           type: boolean
-                          description: Specifies if the persistent volume claim has to be deleted when the cluster is un-deployed.
+                          description: Specifies whether the persistent volume claim is deleted when a Kafka node is deleted. Optional. Defaults to `false`.
                         id:
                           type: integer
                           minimum: 0
@@ -882,6 +882,9 @@ spec:
                               csi: {}
                               image: {}
                         description: Additional volumes that can be mounted to the pod.
+                      hostUsers:
+                        type: boolean
+                        description: "Use the host user namespace. Optional. Defaults to `true`. When `true` or not set, the pod runs in the host user namespace. This is required when the pod needs features available only in the host namespace, such as loading kernel modules with `CAP_SYS_MODULE`.When set to `false`, the pod runs in a new user namespace. Setting `false` helps mitigate container breakout vulnerabilities and allows containers to run as `root` without granting `root` privileges on the host. This property is alpha-level in Kubernetes and is supported only by Kubernetes clusters that enable the `UserNamespacesSupport` feature."
                     description: Template for Kafka `Pods`.
                   perPodService:
                     type: object
@@ -1350,7 +1353,7 @@ spec:
                     description: The storage class to use for dynamic volume allocation.
                   deleteClaim:
                     type: boolean
-                    description: Specifies if the persistent volume claim has to be deleted when the cluster is un-deployed.
+                    description: Specifies whether the persistent volume claim is deleted when a Kafka node is deleted. Optional. Defaults to `false`.
                   id:
                     type: integer
                     minimum: 0
@@ -1404,7 +1407,7 @@ spec:
                           description: The storage class to use for dynamic volume allocation.
                         deleteClaim:
                           type: boolean
-                          description: Specifies if the persistent volume claim has to be deleted when the cluster is un-deployed.
+                          description: Specifies whether the persistent volume claim is deleted when a Kafka node is deleted. Optional. Defaults to `false`.
                         id:
                           type: integer
                           minimum: 0
@@ -2187,6 +2190,9 @@ spec:
                               csi: {}
                               image: {}
                         description: Additional volumes that can be mounted to the pod.
+                      hostUsers:
+                        type: boolean
+                        description: "Use the host user namespace. Optional. Defaults to `true`. When `true` or not set, the pod runs in the host user namespace. This is required when the pod needs features available only in the host namespace, such as loading kernel modules with `CAP_SYS_MODULE`.When set to `false`, the pod runs in a new user namespace. Setting `false` helps mitigate container breakout vulnerabilities and allows containers to run as `root` without granting `root` privileges on the host. This property is alpha-level in Kubernetes and is supported only by Kubernetes clusters that enable the `UserNamespacesSupport` feature."
                     description: Template for Kafka `Pods`.
                   perPodService:
                     type: object
