--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
         <testcontainer.version>2.0.2</testcontainer.version>
         <docker-java.version>3.4.0</docker-java.version>
         <junit4.version>4.13.2</junit4.version>
-        <skodjob.test-frame.version>1.3.0</skodjob.test-frame.version>
+        <skodjob.test-frame.version>1.4.0-SNAPSHOT</skodjob.test-frame.version>
         <skodjob-doc.version>0.6.0</skodjob-doc.version>
         <helm-client.version>0.0.15</helm-client.version>
         <access-operator.version>0.2.0</access-operator.version>
@@ -128,6 +128,20 @@
         <!-- failsafe fork-count configuration -->
         <failsafe.forkCount>1</failsafe.forkCount>
     </properties>
+
+    <repositories>
+        <repository>
+            <name>Central Portal Snapshots</name>
+            <id>central-portal-snapshots</id>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <modules>
         <module>kafka-agent</module>
