--- a/packaging/install/cluster-operator/060-Deployment-strimzi-cluster-operator.yaml
+++ b/packaging/install/cluster-operator/060-Deployment-strimzi-cluster-operator.yaml
@@ -48,33 +48,37 @@ spec:
             - name: STRIMZI_OPERATION_TIMEOUT_MS
               value: "300000"
             - name: STRIMZI_DEFAULT_KAFKA_EXPORTER_IMAGE
-              value: quay.io/strimzi/kafka:0.45.1-kafka-3.9.1
+              value: quay.io/strimzi/kafka:0.45.1-kafka-3.9.2
             - name: STRIMZI_DEFAULT_CRUISE_CONTROL_IMAGE
-              value: quay.io/strimzi/kafka:0.45.1-kafka-3.9.1
+              value: quay.io/strimzi/kafka:0.45.1-kafka-3.9.2
             - name: STRIMZI_KAFKA_IMAGES
               value: |
                 3.8.0=quay.io/strimzi/kafka:0.45.1-kafka-3.8.0
                 3.8.1=quay.io/strimzi/kafka:0.45.1-kafka-3.8.1
                 3.9.0=quay.io/strimzi/kafka:0.45.1-kafka-3.9.0
                 3.9.1=quay.io/strimzi/kafka:0.45.1-kafka-3.9.1
+                3.9.2=quay.io/strimzi/kafka:0.45.1-kafka-3.9.2
             - name: STRIMZI_KAFKA_CONNECT_IMAGES
               value: |
                 3.8.0=quay.io/strimzi/kafka:0.45.1-kafka-3.8.0
                 3.8.1=quay.io/strimzi/kafka:0.45.1-kafka-3.8.1
                 3.9.0=quay.io/strimzi/kafka:0.45.1-kafka-3.9.0
                 3.9.1=quay.io/strimzi/kafka:0.45.1-kafka-3.9.1
+                3.9.2=quay.io/strimzi/kafka:0.45.1-kafka-3.9.2
             - name: STRIMZI_KAFKA_MIRROR_MAKER_IMAGES
               value: |
                 3.8.0=quay.io/strimzi/kafka:0.45.1-kafka-3.8.0
                 3.8.1=quay.io/strimzi/kafka:0.45.1-kafka-3.8.1
                 3.9.0=quay.io/strimzi/kafka:0.45.1-kafka-3.9.0
                 3.9.1=quay.io/strimzi/kafka:0.45.1-kafka-3.9.1
+                3.9.2=quay.io/strimzi/kafka:0.45.1-kafka-3.9.2
             - name: STRIMZI_KAFKA_MIRROR_MAKER_2_IMAGES
               value: |
                 3.8.0=quay.io/strimzi/kafka:0.45.1-kafka-3.8.0
                 3.8.1=quay.io/strimzi/kafka:0.45.1-kafka-3.8.1
                 3.9.0=quay.io/strimzi/kafka:0.45.1-kafka-3.9.0
                 3.9.1=quay.io/strimzi/kafka:0.45.1-kafka-3.9.1
+                3.9.2=quay.io/strimzi/kafka:0.45.1-kafka-3.9.2
             - name: STRIMZI_DEFAULT_TOPIC_OPERATOR_IMAGE
               value: quay.io/strimzi/operator:0.45.1
             - name: STRIMZI_DEFAULT_USER_OPERATOR_IMAGE
