fix(helm): make 'watchNamespaces' unique with .Release.Namespace
Signed-off-by: Sebastian Gaiser <sebastiangaiser@users.noreply.github.com>

--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/templates/020-RoleBinding-strimzi-cluster-operator.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/templates/020-RoleBinding-strimzi-cluster-operator.yaml
@@ -1,39 +1,35 @@
 {{- if .Values.rbac.create -}}
-{{- $root := . -}}
-{{- $watchNamespaces := .Values.watchNamespaces -}}
-{{- if $root.Values.watchAnyNamespace }}
-  {{- $watchNamespaces = list -}}  
-{{- end }}
-{{- range append $watchNamespaces .Release.Namespace }}
+{{- $namespaces := include "strimzi.watchNamespacesList" . | fromYamlArray }}
+{{- range $i, $ns := $namespaces }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-{{- if $root.Values.watchAnyNamespace }}
+{{- if $.Values.watchAnyNamespace }}
 kind: ClusterRoleBinding
 {{- else }}
 kind: RoleBinding
 {{- end }}
 metadata:
-  {{- if $root.Values.watchAnyNamespace }}
+  {{- if $.Values.watchAnyNamespace }}
   name: strimzi-cluster-operator-namespaced
   {{- else }}
   name: strimzi-cluster-operator
-  {{- end }}  
-  {{- if not $root.Values.watchAnyNamespace }}
-  namespace: {{ . }}
+  {{- end }}
+  {{- if not $.Values.watchAnyNamespace }}
+  namespace: {{ $ns }}
   {{- end }}
   labels:
-    app: {{ template "strimzi.name" $root }}
-    chart: {{ template "strimzi.chart" $root }}
+    app: {{ template "strimzi.name" $ }}
+    chart: {{ template "strimzi.chart" $ }}
     component: role-binding
-    release: {{ $root.Release.Name }}
-    heritage: {{ $root.Release.Service }}
+    release: {{ $.Release.Name }}
+    heritage: {{ $.Release.Service }}
 subjects:
   - kind: ServiceAccount
-    name: {{ $root.Values.serviceAccount }}
-    namespace: {{ $root.Release.Namespace }}
+    name: {{ $.Values.serviceAccount }}
+    namespace: {{ $.Release.Namespace }}
 roleRef:
   kind: ClusterRole
   name: strimzi-cluster-operator-namespaced
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
-{{- end }}
+{{- end -}}
