--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/templates/031-RoleBinding-strimzi-cluster-operator-entity-operator-delegation.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/templates/031-RoleBinding-strimzi-cluster-operator-entity-operator-delegation.yaml
@@ -1,37 +1,33 @@
 {{- if .Values.rbac.create -}}
-{{- $root := . -}}
-{{- $watchNamespaces := .Values.watchNamespaces -}}
-{{- if $root.Values.watchAnyNamespace }}
-  {{- $watchNamespaces = list -}}  
-{{- end }}
-{{- range append $watchNamespaces .Release.Namespace }}
+{{- $namespaces := include "strimzi.watchNamespacesList" . | fromYamlArray }}
+{{- range $i, $ns := $namespaces }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-{{- if $root.Values.watchAnyNamespace }}
+{{- if $.Values.watchAnyNamespace }}
 kind: ClusterRoleBinding
 {{- else }}
 kind: RoleBinding
 {{- end }}
 metadata:
   name: strimzi-cluster-operator-entity-operator-delegation
-  {{- if not $root.Values.watchAnyNamespace }}
-  namespace: {{ . }}
+  {{- if not $.Values.watchAnyNamespace }}
+  namespace: {{ $ns }}
   {{- end }}
   labels:
-    app: {{ template "strimzi.name" $root }}
-    chart: {{ template "strimzi.chart" $root }}
+    app: {{ template "strimzi.name" $ }}
+    chart: {{ template "strimzi.chart" $ }}
     component: entity-operator-role-binding
-    release: {{ $root.Release.Name }}
-    heritage: {{ $root.Release.Service }}
+    release: {{ $.Release.Name }}
+    heritage: {{ $.Release.Service }}
 # The Entity Operator cluster role must be bound to the cluster operator service account so that it can delegate the cluster role to the Entity Operator.
 # This must be done to avoid escalating privileges which would be blocked by Kubernetes.
 subjects:
   - kind: ServiceAccount
-    name: {{ $root.Values.serviceAccount }}
-    namespace: {{ $root.Release.Namespace }}
+    name: {{ $.Values.serviceAccount }}
+    namespace: {{ $.Release.Namespace }}
 roleRef:
   kind: ClusterRole
   name: strimzi-entity-operator
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
-{{- end }}
+{{- end -}}
