--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/values.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/values.yaml
@@ -3,8 +3,7 @@
 # Default replicas for the cluster operator
 replicas: 1
 
-# If you set `watchNamespaces` to the same value as ``.Release.Namespace` (e.g. `helm ... --namespace $NAMESPACE`),
-# the chart will fail because duplicate RoleBindings will be attempted to be created in the same namespace
+# Contains `.Release.Namespace` by default
 watchNamespaces: []
 watchAnyNamespace: false
 
