fix(helm): make 'watchNamespaces' unique with .Release.Namespace - adjust test as namespaces are now sorted alphabetically
Signed-off-by: Sebastian Gaiser <sebastiangaiser@users.noreply.github.com>

--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/tests/operator_deployment_test.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/tests/operator_deployment_test.yaml
@@ -119,7 +119,7 @@ tests:
           value: STRIMZI_NAMESPACE
       - equal:
           path: spec.template.spec.containers[0].env[0].value
-          value: "test-namespace,test-namespace2,strimzi-test-namespace"
+          value: "strimzi-test-namespace,test-namespace,test-namespace2"
 
   - it: should construct all kafka images from default image registry if not provided
     asserts:
