feat(helm-charts/operator): custom labelling of operator STS
It is useful to comply with "unified tagging" tooling (e.g. Kyverno
rules) to be able to customize the labels of the operator's StatefulSet.
This PR makes labels editable through the `.Values.deploymentLabels`
setting.

Signed-off-by: Pinimo <Pinimo@users.noreply.github.com>

--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/values.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/values.yaml
@@ -41,6 +41,7 @@ annotations: {}
 labels: {}
 nodeSelector: {}
 deploymentAnnotations: {}
+deploymentLabels: {}
 deploymentStrategy: {}
 priorityClassName: ""
 
