Promote ServerSideApplyPhase1 to beta
Signed-off-by: Lukas Kral <lukywill16@gmail.com>

--- a/.github/actions/systemtests/generate-matrix/pipelines.yaml
+++ b/.github/actions/systemtests/generate-matrix/pipelines.yaml
@@ -342,7 +342,7 @@ pipelines:
     pipeline: "regression-fg"
     profile: "brokers-and-security"
     timeout: 360
-    strimzi_feature_gates: "+ServerSideApplyPhase1,+UseConnectBuildWithBuildah"
+    strimzi_feature_gates: "-ServerSideApplyPhase1,+UseConnectBuildWithBuildah"
     strimzi_rbac_scope: "CLUSTER"
     cluster_operator_install_type: "yaml"
     parallel: 3
@@ -351,7 +351,7 @@ pipelines:
     pipeline: "regression-fg"
     profile: "operators"
     timeout: 360
-    strimzi_feature_gates: "+ServerSideApplyPhase1,+UseConnectBuildWithBuildah"
+    strimzi_feature_gates: "-ServerSideApplyPhase1,+UseConnectBuildWithBuildah"
     strimzi_rbac_scope: "CLUSTER"
     cluster_operator_install_type: "yaml"
     parallel: 4
@@ -360,7 +360,7 @@ pipelines:
     pipeline: "regression-fg"
     profile: "operands"
     timeout: 360
-    strimzi_feature_gates: "+ServerSideApplyPhase1,+UseConnectBuildWithBuildah"
+    strimzi_feature_gates: "-ServerSideApplyPhase1,+UseConnectBuildWithBuildah"
     strimzi_rbac_scope: "CLUSTER"
     cluster_operator_install_type: "yaml"
     parallel: 3
@@ -370,7 +370,7 @@ pipelines:
     pipeline: "regression-fg"
     profile: "brokers-and-security"
     timeout: 360
-    strimzi_feature_gates: "+ServerSideApplyPhase1,+UseConnectBuildWithBuildah"
+    strimzi_feature_gates: "-ServerSideApplyPhase1,+UseConnectBuildWithBuildah"
     strimzi_rbac_scope: "CLUSTER"
     cluster_operator_install_type: "yaml"
     parallel: 4
@@ -379,7 +379,7 @@ pipelines:
     pipeline: "regression-fg"
     profile: "operators"
     timeout: 360
-    strimzi_feature_gates: "+ServerSideApplyPhase1,+UseConnectBuildWithBuildah"
+    strimzi_feature_gates: "-ServerSideApplyPhase1,+UseConnectBuildWithBuildah"
     strimzi_rbac_scope: "CLUSTER"
     cluster_operator_install_type: "yaml"
     parallel: 4
@@ -388,7 +388,7 @@ pipelines:
     pipeline: "regression-fg"
     profile: "operands"
     timeout: 360
-    strimzi_feature_gates: "+ServerSideApplyPhase1,+UseConnectBuildWithBuildah"
+    strimzi_feature_gates: "-ServerSideApplyPhase1,+UseConnectBuildWithBuildah"
     strimzi_rbac_scope: "CLUSTER"
     cluster_operator_install_type: "yaml"
     parallel: 4
